test/TestPhases/typechecker/invalid/assignFloatToInt2.blc
module


activity empty ()()
    var x = 15.0
    var z: int64

    z = x * 3
    await false;
end
